kubernetes/apps/whoami-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-http
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`whoami.127.0.0.1.nip.io`)
    kind: Rule
    services:
    - name: whoami
      port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-https
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`whoami.127.0.0.1.nip.io`)
    kind: Rule
    services:
    - name: whoami
      port: 80
  tls:
    secretName: cert-whoami
    domains:
    - main: whoami.127.0.0.1.nip.io

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-http
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`traefik.127.0.0.1.nip.io`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-https
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`traefik.127.0.0.1.nip.io`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
  tls:
    secretName: cert-traefik
    domains:
    - main: traefik.127.0.0.1.nip.io
---
